--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,16 @@ img{
   position: relative;
 }
 
+.testo{
+  position: absolute;
+  z-index: 2;
+  bottom: 20px;
+  right: 20px;
+  color: white;
+}
+.testo1{
+  width: 300px;
+  height: 300px;
+  background-color: red;
+  z-index: 213;
+}
